add html result

--- a/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -812,7 +812,7 @@
    "metadata": {},
    "source": [
     "**回答**: \n",
-    "首先，依旧使用性别作为第一个分类条件，光使用性别就可以达到一个很好的准确率。之后根据图像，发现在女性中，仍有很大一部分女性无法存活，我们需要再在sex为female的基础上增加分类条件。首先使用Pclass作为条件，发现底层阶级为3的女性死亡数与存活数相差不多，应该继续细分。在阶级为3的女性中，我们可以发现，超过20岁的女性，死亡率非常高，所以我们将超过20岁的女性的预测为死亡,自此，大部分能使用的特征在女性上都已经使用，我们再继续对男性进行分类。可以发现男性10岁以下儿童的死亡率相比其他年龄段的男性要低。"
+    "首先，依旧使用性别作为第一个分类条件，光使用性别就可以达到一个很好的准确率。之后根据图像，发现在女性中，仍有很大一部分女性无法存活，我们需要再在sex为female的基础上增加分类条件。首先使用Pclass作为条件，发现底层阶级为3的女性死亡数与存活数相差不多，应该继续细分。在阶级为3的女性中，我们可以发现，超过20岁的女性，死亡率非常高，所以我们将超过20岁的女性的预测为死亡,自此，大部分能使用的特征在女性上都已经使用，我们再继续对男性进行分类。可以发现男性10岁以下儿童的死亡率相比其他年龄段的男性要低。参考图像，可以发现其他的特征效果都不明显。"
    ]
   },
   {
